# enterprise-rag-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-vector-database.md  0002-hybrid-retrieval-rrf.md  0003-multi-agent-graph.md  0004-guardrails-heuristics.md  0005-ingestion-versioning-dedup.md
evals/: common.py  report.md  run_ragas.py  run_retrieval_eval.py
evals/dataset/: golden_qa.jsonl
evals/dataset/corpus/: expense-policy.md  hr-handbook.md  security-policy.md
grafana/dashboards/: rag.json
grafana/provisioning/dashboards/: default.yml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  secret.example.yaml  service.yaml
prometheus/: prometheus.yml
src/rag/: config.py  exceptions.py  models.py  worker.py
src/rag/agents/: citation.py  graph.py  nodes.py  prompts.py  state.py
src/rag/api/: auth.py  container.py  main.py  middleware.py  schemas.py  service.py  token.py
src/rag/api/routes/: documents.py  health.py  query.py
src/rag/guardrails/: injection.py  pii.py
src/rag/ingestion/: chunkers.py  dedup.py  embedders.py  loaders.py  pipeline.py  queue.py  storage.py
src/rag/llm/: base.py  factory.py  openai_compat.py
src/rag/observability/: logging.py  metrics.py  tracing.py
src/rag/retrieval/: hybrid.py  reranker.py  sparse.py  vector_store.py
tests/integration/: test_live_stack.py
tests/unit/: test_agents.py  test_api.py  test_chunkers.py  test_config.py  test_dedup.py  test_embedders.py  test_guardrails.py  test_hybrid.py  test_llm.py  test_loaders.py  test_logging.py  test_models.py  test_observability.py  test_pipeline.py  test_queue.py  test_sparse.py  test_storage.py  test_vector_store.py
